# rusty-lassie

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs  go.mod  go.sum
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yaml
.github/workflows/: cargo-audit.yml  ci.yaml  dependabot-validation.yml
cross/: Dockerfile
docs/: release.md
go-lib/: go.mod  go.sum  golassie.def  lassie-ffi.go
src/: lib.rs  start_error.rs
tests/: integration_test.rs
