[package]
name = "lassie"
version = "0.1.0"
description = "A Rust wrapper for Lassie - a minimal universal retrieval client library for IPFS and Filecoin"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/filecoin-station/rusty-lassie"
authors = [
    "Miroslav Bajtoš <oss@bajtos.net>"
]

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
pretty_assertions = "1.3.0"
ureq = "2.6.2"
