[package]
name = "lassie"
version = "0.7.0"
description = "A Rust wrapper for Lassie - a minimal universal retrieval client library for IPFS and Filecoin"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/filecoin-station/rusty-lassie"
authors = [
    "Miroslav Bajtoš <oss@bajtos.net>"
]
exclude = [
    "docs/images/logo-square.png",
    "docs/images/logo-rectangle.jpg",
]

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"

[dev-dependencies]
anyhow = "1.0.75"
env_logger = "0.10.1"
pretty_assertions = "1.4.0"
ureq = "2.9.0"

[build-dependencies]
cc = "1.0"
